--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -2,8 +2,8 @@
 <title>Offline Page Renderer</title>
 Offline Page Renderer<hr>
 <script>
-//8-29-15 JChoy v1.134 toggle(mem)
-//8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app. 
+//8-29-15 JChoy v1.135 LongPressBob
+//8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app.
 //-----
 function PageOff(){
   new Ooze().bake(this);
@@ -23,7 +23,8 @@ function PageOff(){
 	for (var i=0,at=["More","Customize","Favorite"],$th=this; i<at.length; i++){
 	  var el= this.bake( document.createElement("span"), {innerHTML:at[i]} );
 	  div.appendChild( this.buttonify(el) ).onclick= function(){$th.doFooterButton(this)}
-	}	
+	  //if (this["havLongPress"]) this.havLongPress( this.createCBfunction("handleLongPress") );
+	}
   }
   this.doFooterButton= function(el){
 	var s=el.innerHTML;
@@ -34,6 +35,9 @@ function PageOff(){
 		new PageOff_srcCls().start("CustomizerApp",
 			"http://rip.okdaily.com/mad/textStore.php?f=text&i=2221");
 	} else alert("Not available");
+  }
+  this.handleLongPress= function(){
+	alert("N/A");
   }
   this.getSpawnAppFromDb= function(){
 	var $privThis = this;
@@ -65,6 +69,7 @@ function PageOff(){
 	this.nuClass = new Function( code + "this.text=" +JSON.stringify(s) );
   } //inner class
   this.extendClass( PageOff_ext_sqldb );
+  this.extendClass( PageOff_ext_longpress );
 }
 //-----
 PageOff_ext_sqldb= function(){
@@ -95,6 +100,25 @@ PageOff_ext_sqldb= function(){
   }
 }
 //-----
+PageOff_ext_longpress= function(){
+  this.havLongPress= function( cb ){
+  	new this.LongPressBob( document.body ).start( cb );
+  }
+  this.LongPressBob= function(el){
+  	this.el = el;
+    new Ooze().bake(this);
+  	this.start= function( cb ){
+  		this.cb = cb;
+  		this.el.onmousedown =this.createCBfunction( "mark", true );
+  		this.el.onmouseup  = this.createCBfunction( "mark", false );
+  	}
+  	this.mark = function( src, isDn ) {
+  		if (isDn) this.to = setTimeout( this.cb, 2000 );
+  		else if (this.to) clearTimeout( this.to );
+  	}
+  }//inner class
+}
+//-----
 PageOff_srcCls= function(){
   new Ooze().bake(this);
   this.start= function(name,url){
@@ -106,7 +130,7 @@ PageOff_srcCls= function(){
   }
   this.deploy= function(name){
 	if (this.isDone) return; else this.isDone= true;
-	new window[name]().start(); 
+	new window[name]().start();
   }
 }
 //-----
@@ -180,7 +204,7 @@ function SqlDb(){
   this.db.transaction( fcn );
  }
 }
- 
+
 function DbApp(){
  this.version = "v1.113";
  var $=this;
@@ -188,7 +212,7 @@ function DbApp(){
    savePup:"INSERT INTO pups (name) VALUES (?);"
    ,getPups:"SELECT * FROM pups ORDER BY name ASC;"
    ,deletePups:"DELETE FROM pups;"
-   ,initPups:"CREATE TABLE IF NOT EXISTS pups (id INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,name TEXT NOT NULL);" 
+   ,initPups:"CREATE TABLE IF NOT EXISTS pups (id INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,name TEXT NOT NULL);"
  }
  $.init=function(dbName, firstSql){
   var $=this;
