--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,8 +1,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
+<head>
 <title>Haqabob</title>
+<style>
+textarea {margin:0 5 -6 1}
+</style>
+</head>
 Haqabob<div><hr></div>
 <script>
-//8-31-15 JChoy v1.138 Haqabob rename
+//9-2-15 JChoy v1.139 textarea spacing, customize only once
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app.
 //-----
 function PageOff(){
@@ -36,7 +41,8 @@ function PageOff(){
 	} else alert("Not available");
   }
   this.handleLongPress= function(){
-	new PageOff_srcCls().start("CustomizerApp",
+	if (!window["CustomizerApp"])
+	  new PageOff_srcCls().start("CustomizerApp",
 		"http://rip.okdaily.com/mad/textStore.php?f=text&i=2221");
 	var at=document.getElementsByTagName("hr");
 	if (!this["faveOne"]) return;
