--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -8,7 +8,7 @@ textarea {margin:0 5 -6 1}
 </head>
 Haqabob<div><hr></div>
 <script>
-//9-9-15 JChoy v1.145 put meta tag inside html tag
+//9-9-15 JChoy v1.146 More can trigger longpress
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app.
 //-----
 function PageOff(){
@@ -66,6 +66,7 @@ function PageOff(){
 	} );
   }
   this.spawnApp= function(s){
+  	if (!s) return new PageOff().handleLongPress();
 	new AppWrapper().deserialize( s ).spawnApp();
 	for (var i=0,at= document.getElementsByTagName("div"); i<at.length; i++)
 		if (at[i].pageOffFooter) document.body.appendChild(at[i]);
@@ -101,6 +102,7 @@ PageOff_ext_sqldb= function(){
   this.getFromDb= function(i, cb){
 	this.sd.getPupByIdDb( [i], function(txn, rs){
 		if (rs.rows.length>0) cb( rs.rows.item(0)["name"] );
+		else cb("");
 	} );
   }
   this.storeApp= function(name){
