--- a/guptinal-i/jsto/pageoff.html
+++ b/guptinal-i/jsto/pageoff.html
@@ -1,4 +1,4 @@
-<html manifest="pageoff.manifest">
+<html manifest="generic.manifest">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
 <head>
 <title>Haqabob</title>
@@ -8,7 +8,7 @@ textarea {margin:0 5 -6 1}
 </head>
 Haqabob<div><hr></div>
 <script>
-//9-9-15 JChoy v1.146 More can trigger longpress
+//9-9-15 JChoy v1.147 generic.manifest
 //8-22-15 JChoy pageoff - offline page launcher. This simple page has bootup code stored locally. It sources in cross domain source code as Javascript classes and stores those codes in sql db. Later, it can retrieve and run those source code, which effectively renders the page as an interactive app.
 //-----
 function PageOff(){
