--- a/guptinal-i/saad/sandbox.html
+++ b/guptinal-i/saad/sandbox.html
@@ -19,6 +19,6 @@
 <script src="js/FsoUtil.js"></script>
 <script src="js/FavTrak.js"></script>
 <script src="js/QuikNote.js"></script>
-<script src="js/myLayout.js"></script>
 <script src="js/FsoUtilTs.js"></script>
-<script src="http://rip.okdaily.com/mad/textStore.php?f=text&i=2326"></script>
+<script>new VfsAuto().start("ro")</script>
+<script src="js/myLayout.js"></script>
